syntax = "proto3";

import "google/protobuf/empty.proto";

service ProductService {
  rpc TestConnection (SimpleMessage) returns (SimpleMessage) {};

  rpc GetProduct(RequestById) returns (Product) {};
  rpc CreateProduct(stream Product) returns (StatusMessage) {};
  rpc GetUsers (google.protobuf.Empty) returns (stream Product) {};
  rpc DeleteProduct(RequestById) returns (StatusMessage) {};
  rpc UpdateProduct (Product) returns (Product) {};

  rpc GetIngredient(RequestById) returns (Ingredient){};
  rpc CreateIngredient(stream Ingredient) returns (StatusMessage) {};
  rpc DeleteIngredient(RequestById) returns (StatusMessage) {};
  rpc UpdateIngredient(Ingredient) returns (Ingredient) {};
  rpc GetIngredients (google.protobuf.Empty) returns (stream Ingredient) {};
}
message SimpleMessage {
  string message = 1;
}

message StatusMessage {
  string message = 1;
  string status = 2;
}

message RequestById {
  int32 id = 1;
}
message Ingredient {
  int32 id = 1;
  string title = 2;
  string alias = 3;
  string description = 4;
  bool acne_fighting = 5;
  int32 comedogenic_rating = 6;
}

message ProductRequest {
  string alias = 1;
  string title = 2;
  string brand = 3;
  string category = 4;
}
message IngredientRequest {
  string title = 1;
  string alias = 2;
  string description = 3;
  bool acne_fighting = 4;
  int32 comedogenic_rating = 5;
}

message Product {
  int32 id = 1;
  string alias = 2;
  string title = 3;
  string brand = 4;
  string category = 5;
}